[package]
name = "poe-leveling-guide-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.33.3", features = ["glow"] }
egui_extras = { version = "0.33.3", features = ["image"] }
env_logger = "0.11.9"
image = { version = "0.25.9", features = ["jpeg", "png"] }
log = "0.4.29"
rust-embed = "8.11.0"
rust-ini = "0.21.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rfd = "0.15"

[profile.release]
strip = true
panic = "abort"
opt-level = 3

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "dwmapi", "uxtheme", "windef", "wingdi", "processthreadsapi", "minwindef"] }
